Update Firebase config with databaseURL
Added databaseURL to Firebase configuration.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         const firebaseConfig = {
             apiKey: "AIzaSyB0bpozGgcczTPRT68NlEAS90mC4Az33XE",
             authDomain: "sushicounter-900df.firebaseapp.com",
+            databaseURL:"https://sushicounter-900df-default-rtdb.europe-west1.firebasedatabase.app/",
             projectId: "sushicounter-900df",
             storageBucket: "sushicounter-900df.firebasestorage.app",
             messagingSenderId: "120063106683",
